<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="gameViewModel"
            type="com.example.oldlady.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/pos_0_0_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{gameViewModel.boardPos00}"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/pos_0_1_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_0_0_text"
            app:layout_constraintTop_toTopOf="@+id/pos_0_0_text" />

        <TextView
            android:id="@+id/pos_0_1_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{gameViewModel.boardPos01}"
            app:layout_constraintBottom_toBottomOf="@+id/pos_0_0_text"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pos_0_1_text"
            app:layout_constraintEnd_toStartOf="@+id/pos_0_2_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_0_1_text"
            app:layout_constraintTop_toTopOf="@+id/pos_0_1_text" />

        <TextView
            android:id="@+id/pos_0_2_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{gameViewModel.boardPos02}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/pos_0_1_text" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/pos_1_0_text"
            app:layout_constraintEnd_toEndOf="@+id/pos_0_2_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pos_0_0_text" />

        <TextView
            android:id="@+id/pos_1_0_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{gameViewModel.boardPos10}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pos_1_0_text"
            app:layout_constraintEnd_toStartOf="@+id/pos_1_1_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_1_0_text"
            app:layout_constraintTop_toTopOf="@+id/pos_1_0_text" />

        <TextView
            android:id="@+id/pos_1_1_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{gameViewModel.boardPos11}"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/pos_1_0_text" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pos_1_0_text"
            app:layout_constraintEnd_toStartOf="@+id/pos_1_2_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_1_1_text"
            app:layout_constraintTop_toTopOf="@+id/pos_1_0_text" />

        <TextView
            android:id="@+id/pos_1_2_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{gameViewModel.boardPos12}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/pos_1_0_text" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="@+id/pos_1_2_text"
            app:layout_constraintStart_toStartOf="@+id/pos_1_0_text"
            app:layout_constraintTop_toBottomOf="@+id/pos_1_0_text" />

        <TextView
            android:id="@+id/pos_2_0_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{gameViewModel.boardPos20}"
            app:layout_constraintEnd_toStartOf="@+id/textView22"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pos_2_0_text"
            app:layout_constraintEnd_toStartOf="@+id/pos_2_1_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_2_0_text"
            app:layout_constraintTop_toTopOf="@+id/pos_2_0_text" />

        <TextView
            android:id="@+id/pos_2_1_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{gameViewModel.boardPos21}"
            app:layout_constraintBottom_toBottomOf="@+id/pos_2_0_text"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/pos_2_0_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/pos_2_0_text"
            app:layout_constraintEnd_toStartOf="@+id/pos_2_2_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pos_2_1_text"
            app:layout_constraintTop_toTopOf="@+id/pos_2_0_text" />

        <TextView
            android:id="@+id/pos_2_2_text"
            style="@style/play_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{gameViewModel.boardPos22}"
            app:layout_constraintBottom_toBottomOf="@+id/pos_2_1_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/pos_2_1_text" />

        <TextView
            android:id="@+id/bottom_player_info_text"
            style="@style/turn_style"
            android:text="@{gameViewModel.bottomPlayerInfoText}"
            app:layout_constraintEnd_toStartOf="@+id/player_1_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pos_2_0_text" />

        <TextView
            android:id="@+id/top_player_info_text"
            style="@style/turn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:rotation="180"
            android:text="@{gameViewModel.topPlayerInfoText}"
            app:layout_constraintBottom_toTopOf="@+id/pos_0_0_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_2_name" />

        <TextView
            android:id="@+id/player_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{gameViewModel.player1Name}"
            app:layout_constraintEnd_toEndOf="@+id/pos_2_2_text"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/pos_2_2_text" />

        <TextView
            android:id="@+id/bottom_player_points_text"
            style="@style/points"
            android:text="@{Integer.toString(gameViewModel.bottomPlayerPoints)}"
            app:layout_constraintEnd_toEndOf="@+id/player_1_name"
            app:layout_constraintStart_toStartOf="@+id/player_1_name"
            app:layout_constraintTop_toBottomOf="@+id/player_1_name" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/points"
            app:layout_constraintEnd_toEndOf="@+id/player_1_name"
            app:layout_constraintStart_toStartOf="@+id/player_1_name"
            app:layout_constraintTop_toBottomOf="@+id/bottom_player_points_text" />

        <TextView
            android:id="@+id/player_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:rotation="180"
            android:text="@{gameViewModel.player2Name}"
            app:layout_constraintBottom_toTopOf="@+id/pos_0_0_text"
            app:layout_constraintEnd_toEndOf="@+id/pos_0_0_text"
            app:layout_constraintStart_toStartOf="@+id/pos_0_0_text" />

        <TextView
            android:id="@+id/top_player_points_text"
            style="@style/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:rotation="180"
            android:text="@{Integer.toString(gameViewModel.topPlayerPoints)}"
            app:layout_constraintBottom_toTopOf="@+id/player_2_name"
            app:layout_constraintEnd_toEndOf="@+id/player_2_name"
            app:layout_constraintStart_toStartOf="@+id/player_2_name" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:rotation="180"
            android:text="@string/points"
            app:layout_constraintBottom_toTopOf="@+id/top_player_points_text"
            app:layout_constraintEnd_toEndOf="@+id/player_2_name"
            app:layout_constraintStart_toStartOf="@+id/player_2_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/continue_playing"
                android:visibility="@{gameViewModel.gameRunning ? View.GONE : View.VISIBLE}" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:visibility="visible" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>